namespace Diplom.Core.Entities;

public class Good
{
    public Guid Id { get; set; }
    public string Name { get; set; }
    public Guid SourceId { get; set; }
    public double Price { get; set; }
}