namespace Diplom.Core.Entities;

public class Source
{
    public Guid Id { get; set; }
    public string Name { get; set; }
}