using Microsoft.AspNetCore.Identity;

namespace Diplom.Core.Entities;

public class User : IdentityUser
{
    
}